// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagSelector renders and matches the snapshot when closed 1`] = `
<div>
  <Field
    label={
      <span
        onClick={[Function]}
      >
        Tags
      </span>
    }
  >
    <div
      className="tag-selector"
    >
      <Input
        aria-haspopup="listbox"
        aria-label="Tags"
        className="tag-selector__input"
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        placeholder="Select or create tags"
        required={false}
        type="text"
        value=""
      />
    </div>
  </Field>
</div>
`;

exports[`TagSelector renders and matches the snapshot when opened 1`] = `
<TagSelector
  label="Tags"
  onTagsUpdate={[MockFunction]}
  placeholder="Select or create tags"
  tags={
    Array [
      Object {
        "displayName": "tag one",
        "name": "tag1",
      },
      Object {
        "displayName": "tag two",
        "name": "tag2",
      },
    ]
  }
>
  <div>
    <Field
      label={
        <span
          onClick={[Function]}
        >
          Tags
        </span>
      }
    >
      <div
        className="p-form__group p-form-validation"
      >
        <Label>
          <label
            className="p-form__label"
          >
            <span
              onClick={[Function]}
            >
              Tags
            </span>
          </label>
        </Label>
        <div
          className="p-form__control u-clearfix"
        >
          <div
            className="tag-selector"
          >
            <Input
              aria-haspopup="listbox"
              aria-label="Tags"
              className="tag-selector__input"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              placeholder="Select or create tags"
              required={false}
              type="text"
              value=""
            >
              <Field
                helpId="mock-nanoid-2"
                isTickElement={false}
                required={false}
                validationId="mock-nanoid-1"
              >
                <div
                  className="p-form__group p-form-validation"
                >
                  <div
                    className="p-form__control u-clearfix"
                  >
                    <input
                      aria-describedby=""
                      aria-errormessage={null}
                      aria-haspopup="listbox"
                      aria-invalid={false}
                      aria-label="Tags"
                      className="p-form-validation__input tag-selector__input"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Select or create tags"
                      required={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Field>
            </Input>
          </div>
        </div>
      </div>
    </Field>
  </div>
</TagSelector>
`;

exports[`TagSelector renders and matches the snapshot with tag descriptions 1`] = `
<TagSelector
  label="Tags"
  onTagsUpdate={[MockFunction]}
  placeholder="Select or create tags"
  tags={
    Array [
      Object {
        "description": "description one",
        "displayName": "tag one",
        "name": "tag1",
      },
      Object {
        "description": "description two",
        "displayName": "tag two",
        "name": "tag2",
      },
    ]
  }
>
  <div>
    <Field
      label={
        <span
          onClick={[Function]}
        >
          Tags
        </span>
      }
    >
      <div
        className="p-form__group p-form-validation"
      >
        <Label>
          <label
            className="p-form__label"
          >
            <span
              onClick={[Function]}
            >
              Tags
            </span>
          </label>
        </Label>
        <div
          className="p-form__control u-clearfix"
        >
          <div
            className="tag-selector"
          >
            <Input
              aria-haspopup="listbox"
              aria-label="Tags"
              className="tag-selector__input"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              placeholder="Select or create tags"
              required={false}
              type="text"
              value=""
            >
              <Field
                helpId="mock-nanoid-2"
                isTickElement={false}
                required={false}
                validationId="mock-nanoid-1"
              >
                <div
                  className="p-form__group p-form-validation"
                >
                  <div
                    className="p-form__control u-clearfix"
                  >
                    <input
                      aria-describedby=""
                      aria-errormessage={null}
                      aria-haspopup="listbox"
                      aria-invalid={false}
                      aria-label="Tags"
                      className="p-form-validation__input tag-selector__input"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Select or create tags"
                      required={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Field>
            </Input>
          </div>
        </div>
      </div>
    </Field>
  </div>
</TagSelector>
`;
